demo/src/main/java/com/example/demo/principle/ocp/positive/FoldChart.java
package com.example.demo.principle.ocp.positive;

/**
 * @Author zhangle
 * @CreateTime 2021-12-02 10:47:39
 * @Description
 */
public class FoldChart extends AbstractChart {
    public void display() {
        System.out.println("--------折形图展示--------");
    }

    public void create() {

    }
}
